--- a/index.html
+++ b/index.html
@@ -5,15 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JQuery</title>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <h1>JQuery Learning</h1>
 
+    <div id="container">
+    </div>
+    <button id="btn1">BTN1</button>
+    <button id="btn2">BTN2</button>
+    <button id="btn3">BTN3</button>
+    <button id="btn4">BTN4</button>
+    <br> <br>
+    <button id="btn5">SlideDown</button>
+    <button id="btn6">SlideUp</button>
+    <button id="btn7">SlideToggle</button>
+    <button id="btn8">Animate</button>
+
+    <hr>
+    <br>
+    <input type="text" id="f" placeholder="Enter"/>
+    <p id="content">It's me. Hey I am the Problem</p>
+
+    <img class="img" src="https://cdn.pixabay.com/photo/2016/10/26/19/00/domain-names-1772240_640.png" style="width: 400px; height:400px" alt="">
+    <button id="btn9">Okay</button>
+
     <!-- CDN -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
+
+    <!-- Offline -->
+    <script src="JavaScript/jquery.min.js"></script>
+    <script src="JavaScript/myjs.js"></script>
 
     <script>
+        // $(document).ready(function(){
+        //     // JQuery Effects
 
+        // })
 
 
         // $(document).ready(function(){
